Bug fix: Player control panel disappears on IE
the height is not needed,

--- a/src/stylesheets/includes/_media-player.scss
+++ b/src/stylesheets/includes/_media-player.scss
@@ -47,7 +47,6 @@ $player-color: $black;
 
     .buttons-wrapper {
       display: flex;
-      height: 100%;
     }
 
     button {
